# 8ch_1bitPlayer_Pico2W

./: CMakeLists.txt  README.md  hw_config.c  main.c  main_overclock_1.c  wsd_player.pio
src/sd_driver/SPI/: my_spi.c  sd_spi.c
